Use Inline document for Highlight Item
Add script for migration deprecated item:
php Plugins/Modules/Rbs/Highlight/Setup/MigrateItemDocuments.php

--- a/Assets/I18n/fr_FR/documents.json
+++ b/Assets/I18n/fr_FR/documents.json
@@ -8,19 +8,19 @@
 	"highlight_items":{
 		"message":"éléments"
 	},
-	"item":{
+	"highlightitem":{
 		"message":"élément"
 	},
-	"item_visual":{
+	"highlightitem_visual":{
 		"message":"visuel"
 	},
-	"item_targetdocument":{
+	"highlightitem_targetdocument":{
 		"message":"document cible"
 	},
-	"item_targeturl":{
+	"highlightitem_targeturl":{
 		"message":"URL cible"
 	},
-	"item_description":{
+	"highlightitem_description":{
 		"message":"description"
 	}
 }
